--- a/Data_Exploration.ipynb
+++ b/Data_Exploration.ipynb
@@ -4809,9 +4809,9 @@
    "metadata": {},
    "source": [
     "#### Progress Report 2 Update\n",
-    "This here is where I started running into problems with my initial exploration. These files were so large I really can only have one open at a time, so I'm going to try out the del function to clear memory space after I'm done creating each genre's sampled DataFrame.\n",
+    "This here is where I started running into problems with my initial exploration as a tried to run all of these large files at once. As explained at the beginning of this notebook, to address this, I took samples of my data through the command line to save computer memory. I will now repeat the process above for the remaining 7 genre files. Because I will be following the same steps, I will only flash the head of each DataFrame immediately after reading it in to check that it is correct. Following that, I will only double check the shape of the DataFrame rather than flashing the head of the DataFrame every time to condense the notebook since the process is shown to work.\n",
     "\n",
-    "Update: As explained at the beginning of this notebook, I took samples of my data through the command line to save computer memory. I will now repeat the process above for the remaining 7 genre files. Because I will be following the same steps, I will only flash the head of each DataFrame immediately after reading it in to check that it is correct. Following that, I will only double check the shape of the DataFrame rather than flashing the head of the DataFrame every time to condense the notebook since the process is shown to work."
+    "To see the data processing for the rest of the genres, please see the [data_prep](https://github.com/Data-Science-for-Linguists-2023/Goodreads-Genre-Reviews-Analysis/tree/main/data_prep) folder. Splitting the proces into multiple notebooks allowed me to save memory, and each notebook follows the exact same process as demonstrated here."
    ]
   },
   {
